
- Some extra steps are taken like in ccf.series.rwl.R
- (1 + 1 - pcrit) / 2 == 1 - pcrit / 2

File: detrend.R
---------------

- Parameter 'f' now has an explicit default value

File: detrend.series.R
----------------------

- Unnecessary double checking of 'method' argument removed
- Parameters 'f' and 'y.name' now have explicit default values
- Graphical parameters are reset on.exit()

File: glk.R
-----------

- Large parts rewritten
- 'glk(ca533)' example in glk.Rd runs about 100 times faster

File: hanning.R
---------------

- Slightly more efficient computation

File: i.detrend.R
-----------------

- Parameter 'f' now has an explicit default value

File: i.detrend.series.R
------------------------

- Parameter 'f' now has an explicit default value
- Fixed a bug where some the values of some parameters were not reflected
  in the result
- Saved result is used instead of detrending twice (once with all methods,
  then with selected method)

File: morlet.R
--------------

- Removed 'param' and made 'k0=6' an explicit default in morlet.func()
- seq(from=1, to=n) - 1 == seq(from=0, to=n-1)
- log2(x) instead of log(x) / log(2)
- Cosmetic changes

File: series.rwl.plot.R
-----------------------

- Some extra steps are taken like in ccf.series.rwl.R
- Graphical parameters are reset on.exit()

File: wavelet.plot.R
--------------------

- log2(x) instead of log(x) / log(2)

File: write.tridas.R
--------------------

- Fixed a bug in the handling of parameter 'crn.units'

2011-07-01 Mikko Korpela
* CHANGES IN dplR VERSION 1.4.3
* Changes below by Mikko Korpela

Directory: po
-------------

- A new directory used for language translations
http://cran.r-project.org/doc/manuals/R-exts.html#Internationalization

Directory: inst/po
------------------

- Location for compiled translations

Directory: inst/po/fi and contents
---------------------

- Compiled Finnish translations

Various .R files:
-----------------
